--- a/queries.css
+++ b/queries.css
@@ -206,6 +206,10 @@
 
 /* BELOW FOR MOBILE DEVICES  */
 @media (max-width: 34em) {
+  html {
+    font-size: 7px;
+  }
+
   .grid {
     row-gap: 4.8rem;
   }
@@ -227,7 +231,7 @@
   .btn,
   .btn:link,
   .btn:visited {
-    padding: 2.4rem 2.2rem;
+    padding: 2.4rem 0.7rem;
   }
 
   .hero-img {
