--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   font-family: "Rubik", sans-serif;
   /* this only works if there is nothing position absolute in relation to body  */
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar {
